# lego-edit

./: Disclaimer.md  LICENSE  README.md  coco.txt  inference_sam.py  legodemo.py  nodes.py  requirements.txt  system_prompt.txt  workflow.json
comfy/ldm/models/: autoencoder.py
comfy/text_encoders/: flux.py  t5_config_xxl_distill.json
comfy_extras/: nodes_canny.py  nodes_morphology.py
common/: agent_logger.py  aiohttp_util.py  singleton.py  utils.py
custom_nodes/ComfyUI-KJNodes/: __init__.py  pyproject.toml
custom_nodes/ComfyUI-KJNodes/nodes/: image_nodes.py
custom_nodes/teacache/: LICENSE  README.md  __init__.py  nodes.py  nodes_diffusers.py  pyproject.toml  requirements.txt
custom_nodes/teacache/.github/workflows/: publish.yml
custom_nodes/teacache/examples/: teacache_cogvideox.json  teacache_flux.json  teacache_hunyuanvideo.json  teacache_ltx_video.json  teacache_pulid_flux.json
docs/: index.html
docs/static/css/: style.css
lama/: predict.py
lama/saicinpainting/training/modules/: fake_fakes.py
model_pipeline/all_pipeline/lama/: lama_infer.py
model_pipeline/all_pipeline/mirmbg/: infer_onnx.py
model_sam/: evf_efficientvit_boxembd.py  evf_sam.py  evf_sam2.py
model_sam/efficientvit/: backbone.py  cls.py  dc_ae.py  sam.py  seg.py
model_sam/efficientvit/nn/: drop.py  ops.py
model_sam/efficientvit/utils/: list.py  network.py  random.py
model_sam/segment_anything/modeling/: mask_decoder.py
