[project]
name = "teacache"
description = "Unofficial implementation of [ali-vilab/TeaCache](https://github.com/ali-vilab/TeaCache) for ComfyUI"
version = "1.2.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/welltop-cn/ComfyUI-TeaCache"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yunjieyu"
DisplayName = "ComfyUI-TeaCache"
Icon = ""
